--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -7,7 +7,7 @@ permissions:
 
 on:
   schedule:
-    - cron: '0 21 * * *' # every 24 hours
+    - cron: '0 6 */2 * *' # Runs at 06:00, every 2 days.
   workflow_dispatch:
 
 jobs:
